# PhysicsEngine3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
PhysicsEngine3D/: CMakeLists.txt  PhysicsEngine3D.h  main.cpp
PhysicsEngine3D/core/: Block.cpp  Block.hpp  Light.cpp  Light.hpp  Object3D.cpp  Object3D.hpp  Sphere.cpp  Sphere.hpp  camera.cpp  camera.hpp  scene.cpp  scene.hpp
PhysicsEngine3D/engine/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
PhysicsEngine3D/rendering/: Shader.cpp  Shader.hpp  renderer.cpp  renderer.hpp
PhysicsEngine3D/shaders/: basic.frag  basic.vert
scripts/bash/: build.sh  package.sh  setup-deps.sh  test.sh
scripts/powershell/: build.ps1  package.ps1  setup-deps.ps1  test.ps1
